<resources>
    <string name="app_name">chorbagenda.ad</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="telephone">Telephone</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="empty_list_message">Contact list empty</string>
    <string name="contact_added_message">Contact %1$s added successfully</string>
    <string name="title_activity_list">Contacts List</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_add_person">Add Contact</string>
    <string name="email">email</string>
    <string name="mail">Email:</string>
</resources>
